tried to fix z-index for sidenav, but still not working well

--- a/app/assets/stylesheets/shared/application.css
+++ b/app/assets/stylesheets/shared/application.css
@@ -44,6 +44,7 @@ main.main{
 
 footer.foot{
   background: #FFFDFC;
+  position: relative;
   z-index: 60;
  }
 
@@ -75,8 +76,9 @@ main .inmain{
   /* margin-top: 69px; */
   /* sidenav 240px + aside 56px = 296px */
   margin-left: 56px;
+  position: relative;
   transition: 0.3s linear;
-  z-index: -20;
+  z-index: -10;
 }
 
 /* footer */
@@ -156,6 +158,7 @@ a#sitename{
    top: 0;
    left: -46px;
   text-transform: uppercase;
+  z-index: 100;
 }
 
 
@@ -174,7 +177,7 @@ nav.sidenav{
   transition: 0.3s linear;
   /* width will be 240px */
   width: 0;
-  z-index: -10;
+  z-index: 10;
 }
 nav.sidenav > *{
   display: block;
